login/Register page added

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,149 @@
-<p>
-  homepage works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Movies Review System</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#" routerLink="/homepage" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <form class="form-inline">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </li>
+          </ul>
+          <span class="navbar-text">
+            <div class="row">
+                <a class="nav-link" href="#" routerLink="/login" routerLinkActive="active">Login <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#" routerLink="/register" routerLinkActive="active">Register</a>
+            </div>
+        </span>
+        </div>
+      </nav>
+<div class="container">
+   <div class="row">
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card myCard" >
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card  myCard">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+               <h4 class="card-title">Card title</h4>
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
