--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,3 +1,36 @@
-<p>
-  login works!
-</p>
+<div class="container mt-5">
+   <div class="row d-flex justify-content-center ">
+      <div class="col-lg-5 " align="center" style="padding: 20px; border:1px solid black">
+         <form>
+         	<div class="col-lg-12 mt-2 d-flex justify-content-start" >
+         		<h2 style="float: left;">Login</h2>
+         	</div>
+            
+            <div class="col-lg-12 mt-2 d-flex justify-content-start" >
+            	<div class="row" style="width: 100%">
+            		<div class="col-lg-3">
+            			<p style="float: left;">Email</p>
+            		</div>
+            		<div class="col-lg-9">
+            			<input type="email"  class="form-control" placeholder="Email address" required autofocus>
+            		</div>
+            	</div>
+            </div>
+            <div class="col-lg-12 mt-2 d-flex justify-content-start" >
+            	<div class="row" style="width: 100%">
+            		<div class="col-lg-3">
+            			<p style="float: left;">Password<p>
+            		</div>
+            		<div class="col-lg-9">
+            			 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            		</div>
+            	</div>
+            </div>
+
+            <div class="col-lg-12 mt-2 d-flex justify-content-center">
+               <button class="btn btn-lg btn-primary " type="submit">Sign in</button>	
+            </div>
+         </form>
+      </div>
+   </div>
+</div>
