--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,3 +1,70 @@
-<p>
-  register works!
-</p>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-7">
+      <div class="row mt-3">
+        <h1>Registration</h1>
+      </div>
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">First Name</p>
+            </div>
+            <div class="col-lg-8">
+              <input type="text"  class="form-control" placeholder="First Name" required autofocus>
+            </div>
+      </div>
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">Last Name</p>
+            </div>
+            <div class="col-lg-8">
+              <input type="text"  class="form-control" placeholder="Last Name" required autofocus>
+            </div>
+      </div>
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">User Name</p>
+            </div>
+            <div class="col-lg-8">
+              <input type="text"  class="form-control" placeholder="User Name" required autofocus>
+            </div>
+      </div>
+
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">Gender</p>
+            </div>
+            <div class="col-lg-8">
+              
+            </div>
+      </div>
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">Date of Birth</p>
+            </div>
+            <div class="col-lg-8">
+              
+            </div>
+      </div>
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">Password</p>
+            </div>
+            <div class="col-lg-8">
+              <input type="password"  class="form-control" placeholder="Password" required autofocus>
+            </div>
+      </div>
+      <div class="row mt-3">
+          <div class="col-lg-4">
+              <p style="float: left;">Confirm Password</p>
+            </div>
+            <div class="col-lg-8">
+              <input type="password"  class="form-control" placeholder="Password" required autofocus>
+            </div>
+      </div>
+      <div class="col-lg-12 mt-3 d-flex justify-content-center">
+          <button class="btn btn-lg btn-primary " type="submit">Register</button>	
+       </div>
+    </div>
+
+  </div>
+</div>
