--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -1,3 +1,112 @@
-<p>
-  movie-detail works!
-</p>
+<div class="box">
+    <div class="container">
+        <div class="row card-1" >
+          <div class="col-md-3 ">
+            <div>
+                <img class="movie-img img-responsive" src="https://static.comicvine.com/uploads/scale_small/11/113509/4413258-ultron.jpg" alt="Avenger Image"  style="">
+              </div>
+          </div>
+          <div class="col-md-9 ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <p class="movie-name">Avengers: Age of Ultron</p>
+                    </div>
+                    <div class="col-md-4 ">
+                        <div class="avrg-rating">rating : 4.5/5</div>
+                    </div>
+              </div>
+            </div>
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-12">
+                        <p class="movie-description">
+                            In eu risus metus. Proin viverra pellentesque dui vel tempus. 
+                            Aliquam ac gravida felis. Maecenas fringilla est dapibus, consequat lacus nec, tempus lectus.
+                            Aenean est ligula, volutpat non magna eget, lacinia tincidunt justo. Etiam aliquam leo mauris, tempor porta risus imperdiet in.
+                            Nulla libero orci, porta et tincidunt et, consectetur ut lectus. Nulla a sem in justo volutpat ultricies. 
+                            Fusce eu nunc eros. Vivamus sed viverra ipsum. 
+                            Mauris a ligula et arcu placerat congue ut vitae urna. 
+                            Integer id elit mollis, ornare nunc ac, lobortis nulla. 
+                            Nam vel mollis nisi. Sed odio augue, placerat at velit at, bibendum ultrices urna. 
+                            In hac habitasse platea dictumst. Integer sollicitudin blandit sodales.
+                        </p>
+                      </div>
+                </div>
+              </div>
+              <div class="container">
+                  <div class="row">
+                    <div class="col-md-4" style="padding-left: 30px">Laguage : English</div>
+                    <div class="col-md-4">Year : 2006</div>
+                    <div class="col-md-4">Reviews : 25</div>
+                  </div>
+              </div>
+              
+          </div>
+        </div>
+    </div>
+    <div class="container">
+          <div class="row mt-5">
+                <h1 style="margin-left: 12px;" >Reviews</h1>
+          </div>
+    </div>
+    <div class="container">
+      <div class="row mt-3 ">
+          <div class="col-md-12 card">
+              <div class="row inner-row">
+                  <div class="col-md-3">
+                      <div>
+                          <img src="./assets/img/avtar.png" alt="Cute kitten" class="img-responsive user-img"></div>
+                  </div>
+                  <div class="col-md-9">
+                      <div class="row">
+                        <div class="col-md-4 user-name">
+                                User Name
+                        </div>
+                        <div class="col-md-8 user-rating">
+                             Rating : 4/5
+                        </div>
+                      </div> 
+                      <div class="row">
+                        <p class="user-review">
+                            Fusce eu nunc eros. Vivamus sed viverra ipsum. 
+                            Mauris a ligula et arcu placerat congue ut vitae urna. 
+                            Integer id elit mollis, ornare nunc ac, lobortis nulla.
+                        </p>
+                      </div>   
+                  </div>
+              </div>
+                
+            </div>
+
+
+            <div class="col-md-12 card">
+                <div class="row inner-row">
+                    <div class="col-md-3 ">
+                        <div>
+                            <img src="./assets/img/avtar.png" alt="Cute kitten" class="img-responsive user-img"></div>
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row">
+                          <div class="col-md-4 user-name">
+                                  User Name
+                          </div>
+                          <div class="col-md-8 user-rating">
+                               Rating : 4.5/5 
+                          </div>
+                        </div> 
+                        <div class="row user-review">
+                          <p>
+                              Fusce eu nunc eros. Vivamus sed viverra ipsum. 
+                              Mauris a ligula et arcu placerat congue ut vitae urna. 
+                              Integer id elit mollis, ornare nunc ac, lobortis nulla.
+                          </p>
+                        </div>   
+                    </div>
+                </div>
+                  
+              </div>
+      </div>
+  </div> 
+</div>
+
