--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.nav-color{
+
+
+    background-color: #bdc3c7;
+}
+
+.btn {
+    border-radius: 10px;
+    color: #000 !important;
+  }
