--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,149 +1,126 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Movies Review System</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#" routerLink="/homepage" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            <div class="row">
-                <a class="nav-link" href="#" routerLink="/login" routerLinkActive="active">Login <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#" routerLink="/register" routerLinkActive="active">Register</a>
-            </div>
-        </span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">Movie Review System</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Categories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-warning" href="#">Login / Register</a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <!-- Slide One - Set the background image for this slide in the line below -->
+      <div class="carousel-item active" style="background-size:cover; background-image: url('./assets/img/sample3.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Intesteller</h3>
+          <p>Rating 5</p>
         </div>
-      </nav>
-<div class="container">
-   <div class="row">
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
       </div>
-      <div class="col-md-3">
-         <div class="card myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
+      <!-- Slide Two - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-size:cover; background-image: url('./assets/img/sample.png')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Second Slide</h3>
+          <p>This is a description for the second slide.</p>
+        </div>
       </div>
-      <div class="col-md-3">
-         <div class="card myCard" >
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
+      <!-- Slide Three - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-size:cover;background-image: url('./assets/img/sample2.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Third Slide</h3>
+          <p>This is a description for the third slide.</p>
+        </div>
       </div>
-      <div class="col-md-3">
-         <div class="card myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
+      <div class="carousel-item" style="background-size:cover;background-image: url('./assets/img/sample5.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Third Slide</h3>
+          <p>This is a description for the third slide.</p>
+        </div>
       </div>
-      <div class="col-md-3">
-         <div class="card myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
+      <div class="carousel-item" style="background-size:cover;background-image: url('./assets/img/sample6.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Third Slide</h3>
+          <p>This is a description for the third slide.</p>
+        </div>
       </div>
-      <div class="col-md-3">
-         <div class="card myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</header>
+
+<!-- Page Content -->
+<section id="action">
+
+  <div class="container mt-3">
+    <div class="row">
+      <h2>Romantic</h2>
+    </div>
+
+
+    <div class="container mt-3 mb-3">
+      <div class="row">
+        <div *ngFor="let movie of movies">
+          <div class=col-md-3>
+            <div class="card-1 movie-card">
+<a routerLink="/video">
+           <img class="movie-card-img" src="https://i.pinimg.com/236x/7a/76/82/7a76826b00a142a7c677c519d8e856c7--sci-fi-films-cinema-movies.jpg">
+           <h2>{{movie.movieName}}</h2>  
+          </a>
+          </div>
+
+
+          </div>
+
+
+
+        </div>
       </div>
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
-      </div>
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
-      </div>
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
-      </div>
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
-      </div>
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
-      </div>
-      <div class="col-md-3">
-         <div class="card  myCard">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-               <h4 class="card-title">Card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
+
+    </div>
+    <!--.container-->
+  </div>
+
+
+</section>
+
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; MRS 2017</p>
+  </div>
+  <!-- /.container -->
+</footer>
